[package]
name = "fifo_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../../domain-lib/basic", features = ["task"]  }
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }
task_meta = { path = "../../../domain-lib/task_meta"  }
common_scheduler = { path = "../common_scheduler" }
storage = { path = "../../../domain-lib/storage", features = ["impl"] }
log = "0"