[package]
name = "plic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }
basic = { path = "../../../domain-lib/basic"  }

spin = "0"
raw_plic = { git = "https://github.com/os-module/plic", branch = "dev", package = "plic" }
