[package]
name = "random_scheduler"
version = "0.1.0"
edition = "2021"


[dependencies]
interface = { git = "https://github.com/os-module/domain-lib"  }
rref = { git = "https://github.com/os-module/domain-lib"  }
basic = { git = "https://github.com/os-module/domain-lib"  }
task_meta = { git = "https://github.com/os-module/domain-lib"  }
common_scheduler = { path = "../common_scheduler" }