[package]
name = "random_scheduler"
version = "0.1.0"
edition = "2021"


[dependencies]
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }
basic = { path = "../../../domain-lib/basic"  }
task_meta = { path = "../../../domain-lib/task_meta"  }
common_scheduler = { path = "../common_scheduler" }