[package]
name = "syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { git = "https://github.com/os-module/domain-lib"  }
interface = { git = "https://github.com/os-module/domain-lib"  }
rref = { git = "https://github.com/os-module/domain-lib"  }

pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
bit_field = "0.10"
log = "0"