[package]
name = "syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../../domain-lib/basic"  }
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }

pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
vfscore = { path = "../../../rvfs-ref/vfscore-ref", package = "vfscore-ref" , features = ["linux_error"] }
bit_field = "0.10"
log = "0"