[package]
name = "task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../../domain-lib/basic", features = ["task"] }
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }
task_meta = { path = "../../../domain-lib/task_meta"  }

small-index = { git = "https://github.com/os-module/small-index" }
vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
page_table = { git = "https://github.com/os-module/page-table.git", package = "page-table" }
memory_addr = { git ="https://github.com/os-module/memory_addr" }
ptable = { git = "https://github.com/os-module/vmspace", package = "vmspace" }
pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }

spin = "0"
log = "0"
# now we trust the elf loader
xmas-elf = "0.9"  # unsafe lib
