[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../../domain-lib/basic"  }
rref = { path = "../../../domain-lib/rref"  }
interface = { path = "../../../domain-lib/interface"  }

vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
unifs = { git = "https://github.com/os-module/rvfs.git" }

downcast-rs = { version = "1.2.0", default-features = false }
cpio_reader = { version = "0.1.1" }
libflate = { version = "2.0.0", default-features = false }
core2 = { version = "0.4", default-features = false } # unsafe lib, but in whitelist
log = "0"
spin = "0"
vfs_common = { path = "../vfs_common" }
storage = { path = "../../../domain-lib/storage", features = ["impl"] }