[package]
name = "generic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../../domain-lib/interface" }
shared_heap = { path = "../../../domain-lib/shared_heap" }
basic = { path = "../../../domain-lib/basic" }
vfscore = { path = "../../../rvfs-ref/vfscore-ref", package = "vfscore-ref" , features = ["linux_error"] }
log = "0"
spin = "0"
vfs_common = { path = "../vfs_common" }