[package]
name = "goldfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }
basic = { path = "../../../domain-lib/basic"  }

rtc  = { git = "https://github.com/os-module/rtc", branch = "dev" }
timestamp = { git = "https://github.com/Byte-OS/timestamp" }
spin = "0"