[package]
name = "sshadow_blk"
version = "0.1.0"
edition = "2021"


[dependencies]
interface = { git = "https://github.com/os-module/domain-lib"  }
rref = { git = "https://github.com/os-module/domain-lib"  }
basic = { git = "https://github.com/os-module/domain-lib"  }

spin = "0"
log = "0"