[package]
name = "uart16550"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { git = "https://github.com/os-module/domain-lib"  }
rref = { git = "https://github.com/os-module/domain-lib"  }
basic = { git = "https://github.com/os-module/domain-lib"  }

raw_uart16550 = { git = "https://github.com/os-module/uart16550", package = "uart16550" }
spin = "0"