[package]
name = "uart8250"
version = "0.1.0"
edition = "2021"


[dependencies]
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }
basic = { path = "../../../domain-lib/basic" }


uart8250 = { git = "https://github.com/os-module/uart-rs" }
spin = "0"