[package]
name = "virtio_mmio_block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { git = "https://github.com/os-module/domain-lib"  }
rref = { git = "https://github.com/os-module/domain-lib"  }
basic = { git = "https://github.com/os-module/domain-lib"  }

virtio_mmio_common = { path = "../virtio_mmio_common" }
virtio-drivers = { git = "https://github.com/os-module/safe-virtio-drivers.git" } # safe crate
spin = "0"
log = "0"