[package]
name = "virtio_mmio_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }
basic = { path = "../../../domain-lib/basic"  }

virtio-drivers = { git = "https://github.com/os-module/safe-virtio-drivers.git" }
virtio_mmio_common = { path = "../virtio_mmio_common" }
spin = "0"
log = "0"