[package]
name = "devfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { git = "https://github.com/os-module/domain-lib"  }
basic = { git = "https://github.com/os-module/domain-lib"  }
rref = { git = "https://github.com/os-module/domain-lib"  }

devfs = { git = "https://github.com/os-module/rvfs.git" }
vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
generic = { path = "../generic" }
pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
log = "0"
spin = "0"