[package]
name = "devfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../../domain-lib/interface"  }
basic = { path = "../../../domain-lib/basic"  }
rref = { path = "../../../domain-lib/rref"  }

devfs = { git = "https://github.com/os-module/rvfs.git" }
vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
generic = { path = "../generic" }
pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
log = "0"