[package]
name = "fatfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../../domain-lib/interface"  }
basic = { path = "../../../domain-lib/basic"  }

generic = { path = "../generic" }
fat-vfs = { git = "https://github.com/os-module/rvfs.git" }
vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
log = "0"