[package]
name = "generic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }
basic = { path = "../../../domain-lib/basic"  }

vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
log = "0"
spin = "0"