[package]
name = "pipefs"
version = "0.1.0"
edition = "2021"


[dependencies]
interface = { git = "https://github.com/os-module/domain-lib"  }
rref = { git = "https://github.com/os-module/domain-lib"  }
basic = { git = "https://github.com/os-module/domain-lib"  }

vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
dynfs = { git = "https://github.com/os-module/rvfs.git" }
generic = { path = "../generic" }
log = "0"
spin = "0"