[package]
name = "pipefs"
version = "0.1.0"
edition = "2021"


[dependencies]
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }
basic = { path = "../../../domain-lib/basic"  }

vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
dynfs = { git = "https://github.com/os-module/rvfs.git" }
generic = { path = "../generic" }
log = "0"