[package]
name = "procfs"
version = "0.1.0"
edition = "2021"


[dependencies]
interface = { path = "../../../domain-lib/interface"  }
rref = { path = "../../../domain-lib/rref"  }
basic = { path = "../../../domain-lib/basic"  }

generic = { path = "../generic" }
vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
dynfs = { git = "https://github.com/os-module/rvfs.git" }
log = "0"