[package]
name = "ramfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { git = "https://github.com/os-module/domain-lib"  }
basic = { git = "https://github.com/os-module/domain-lib"  }

generic = { path = "../generic" }
ramfs = { git = "https://github.com/os-module/rvfs.git" }
vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
log = "0"
spin = "0"