[package]
name = "PACKAGE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malloc = { git = "https://github.com/os-module/domain-lib"  }
corelib = { git = "https://github.com/os-module/domain-lib"  }
basic = { path = "../../../domain-lib/basic"  }
rref = { path = "../../../domain-lib/rref"  }
interface = { path = "../../../domain-lib/interface", features = ["domain"] }

DOMAIN_NAME = { path = "../../TY/DOMAIN_NAME" }