[package]
name = "fifo_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../../../domain-lib/basic", features = ["task"]  }
interface = { path = "../../../../domain-lib/interface" }
shared_heap = { path = "../../../../domain-lib/shared_heap" }
task_meta = { path = "../../../../domain-lib/task_meta" }
common_scheduler = { path = "../../../common_lib/common_scheduler" }
storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
log = "0"